Disable CSRF protection in test mode
By disabling this protection, we can now test dynamic forms (involving javascript to generate needed fields) by submitting directly the known values to action URI.

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -2,11 +2,10 @@ imports:
     - { resource: config_dev.yml }
 
 framework:
-    test: ~
-    session:
-        storage_id: session.storage.mock_file
-    profiler:
-        enabled: false
+    test:            ~
+    session:         { storage_id: session.storage.mock_file }
+    profiler:        { enabled: false }
+    csrf_protection: { enabled: false }
 
 web_profiler:
     toolbar: false
